syntax = "proto3";
package desmos.profiles.v2;

import "gogoproto/gogo.proto";
import "desmos/profiles/v2/models_params.proto";
import "desmos/profiles/v2/models_profile.proto";
import "desmos/profiles/v2/models_dtag_requests.proto";
import "desmos/profiles/v2/models_chain_links.proto";
import "desmos/profiles/v2/models_app_links.proto";

option go_package = "github.com/desmos-labs/desmos/v3/x/profiles/types";

// GenesisState defines the profiles module's genesis state.
message GenesisState {
  option (gogoproto.goproto_getters) = false;

  repeated desmos.profiles.v2.DTagTransferRequest dtag_transfer_requests = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"dtag_transfer_requests\"",
    (gogoproto.customname) = "DTagTransferRequests"
  ];

  desmos.profiles.v2.Params params = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"params\""
  ];

  string ibc_port_id = 3 [
    (gogoproto.moretags) = "yaml:\"ibc_port_id\"",
    (gogoproto.customname) = "IBCPortID"
  ];

  repeated desmos.profiles.v2.ChainLink chain_links = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"chain_links\""
  ];

  repeated ApplicationLink application_links = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"application_links\""
  ];
}
